--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -127,3 +127,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+button {
+  cursor: pointer;
+}
+a {
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+}
