--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -1,1 +1,14 @@
+$color-black-grey: #242424;
+$color-black-trasparent: #000000bd;
+$color-grey: #d9d9d9;
 $color-white: #ffffff;
+$color-purple: #7a5aff;
+$color-red: #de2f26;
+@mixin text-style-iria-sans() {
+  font-size: 12px;
+  font-family: "Inria Sans";
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  text-transform: none;
+}
