--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -4,6 +4,7 @@ $color-grey: #d9d9d9;
 $color-white: #ffffff;
 $color-purple: #7a5aff;
 $color-red: #de2f26;
+$color-pink: #b413ff;
 @mixin text-style-iria-sans() {
   font-size: 12px;
   font-family: "Inria Sans";
