added deleted contact

--- a/src/pages/Dashboard/styles.module.scss
+++ b/src/pages/Dashboard/styles.module.scss
@@ -1,10 +1,11 @@
 @use "../../sass/abstract/variables" as *;
 
 .container__dashboardMain {
-  margin-top: 7rem;
+  margin-top: 6rem;
 }
 
 .container__dashboardMain > section {
   background: linear-gradient($color-pink, $color-purple);
   margin: 0 1rem;
+  border-radius: 16px;
 }
