--- a/src/components/RenderCards/CreateCards/styles.module.scss
+++ b/src/components/RenderCards/CreateCards/styles.module.scss
@@ -2,15 +2,16 @@
 
 .container__createCard {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  gap: 0.5rem;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
   background-color: $color-black-grey;
   color: $color-white;
-  padding: 0.5rem;
+  padding: 0.8rem;
   border-radius: 12px;
 }
-.container__createCard > div {
+
+.container__divName {
   background: linear-gradient($color-pink, $color-purple);
   height: 40px;
   width: 40px;
@@ -21,4 +22,24 @@
   justify-content: center;
   font-size: 1.5rem;
   font-weight: 700;
+}
+
+.container__divButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 163px;
+  font-size: 0rem;
+}
+
+.container__divButtons > button {
+  height: 35px;
+  width: 40px;
+  border: none;
+  background: transparent;
+}
+
+.container__divButtons > button > svg {
+  font-size: 1.5rem;
+  color: $color-white;
 }
