--- a/src/components/Modal/CreateContactModal/styles.module.scss
+++ b/src/components/Modal/CreateContactModal/styles.module.scss
@@ -5,11 +5,10 @@
   flex-direction: column;
   gap: 0.5rem;
 
-  border: 1px solid $color-black-grey;
-
   width: 80%;
 
   border-radius: 4px;
+  border: 1px solid $color-white;
 
   background: $color-black-grey;
   color: $color-white;
@@ -51,4 +50,29 @@
   font-size: 1.2rem;
 
   font-family: "Holtwood One SC", serif;
+}
+
+@media (min-width: 767px) {
+  .container__createModal {
+    transform: translate(-50%, -29%);
+    width: 57%;
+  }
+}
+
+@media (min-width: 1023px) {
+  .container__createModal {
+    transform: translate(-50%, -28%);
+    width: 49%;
+  }
+
+  .container__createModal > div > button {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1439px) {
+  .container__createModal {
+    transform: translate(-65%, -20%);
+    width: 40%;
+  }
 }
